[package]
name = "usp"
version = "0.1.0"
authors = ["Jesper Dalberg <jdalberg@gmail.com>"]
edition = "2024"
rust-version = "1.86"
license = "Unlicense"
description = "Parse and generate CWMP messages"
repository = "https://github.com/jdalberg/cwmp/"
readme = "README.md"
keywords = ["cwmp", "tr-069", "acs"]
categories = ["parsing"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
thiserror = "^2"

[build-dependencies]
prost-build = "0.13"
